mule-fundamentals/v/3.6/basic-studio-tutorial.adoc
= Basic Studio Tutorial
:keywords: studio, tutorial, request, response, http, listener, config

image:/documentation/download/thumbnails/122751580/mulestudio%281%29.png?version=1&modificationDate=1405024031207[image]This exercise is designed to introduce you to Anypoint Studio and help you get comfortable building applications.

This tutorial walks you through how to use Anypoint Studio to build a simple HTTP request-response application. After creating and running the example locally, you are able to apply what you have learned to create link:/documentation/display/current/Content-Based+Routing+Tutorial[more complex applications].

== Assumptions

This tutorial assumes that you have link:/documentation/display/current/Download+and+Launch+Anypoint+Studio[downloaded and installed Anypoint Studio]. If you do not have any previous experience with Eclipse or an Eclipse-based IDE, please review the brief introduction to the link:/documentation/display/current/Anypoint+Studio+Essentials[Anypoint Studio interface].

== Goals

In this tutorial, our goals are to:

. Create an application in Anypoint Studio containing a single flow that:
** Receives an HTTP request 
** Logs the message payload 
** Returns a modified payload as an HTTP response
. Run the application on a local runtime embedded in Anypoint Studio.
. Test the application using your browser. 
. Stop the application.
. Edit the application and rerun it.
. _(Optional)_ Apply your knowledge to an extra credit challenge.

link:#BasicStudioTutorial-code2[Skip to the code]

== Launching Studio

If you have already launched Studio as part of the installation process, and it is now running, skip the rest of this section and proceed directly to link:#BasicStudioTutorial-CreatingaNewProject[Creating a New Project].

. Navigate to the directory on your local drive in which you installed Studio.
. Double-click the executable file to launch Studio.
** `AnypointStudio.exe` in Windows
** `AnypointStudio.app` in Mac OS
** `AnypointStudio` in Linux
. When Studio displays the *Workspace Launcher* dialog, click *OK* to accept the default workspace.
+
image:/documentation/download/attachments/122751580/workspacelauncher.png?version=1&modificationDate=1405024032072[image]
+
. If this is the first time you have launched Studio, you may see a *Welcome* screen. Click *Create a Project* to dismiss the screen and jump straight to the New Mule Project wizard.
+
image:/documentation/download/attachments/122751580/WelcomeScreen.png?version=1&modificationDate=1405024032009[image]

== Creating a New Project

. Unless the New Project Wizard is already open, click *File* > *New* > *Mule Project*.
. Studio opens the *New Mule Project* wizard. Fill in the *Name* field with the value Basic Tutorial.
. Click the *Server Runtime* to which you want to deploy your project. Anypoint Studio automatically populates the Server Runtime field with a default server that comes bundled with your download. You can change to a different runtime if you have others installed – this project works with any runtime. For more about installing additional runtime versions, see link:/documentation/display/current/Installing+Extensions[Installing Extensions].
+
image:/documentation/download/attachments/122751580/new.png?version=1&modificationDate=1417727065112[image]
+
. Click *Finish* to create the project.
. In the *Package Explorer*, `Basic Tutorial.xml` appears inside the `src/main/app` folder.
+
image:/documentation/download/attachments/122751580/packages.png?version=1&modificationDate=1417727160364[image]
+
The `.xml` file stores flow information for the visual editor. When your new project opens for the first time, Mule Studio automatically opens the `.xml file` and presents you with a blank canvas. The main sections of the UI are the following:
+
image:/documentation/download/attachments/122751580/blank+canvas.png?version=2&modificationDate=1420213821987[image]
+
Find out more about the .mflow and mule-project.xml files
+
The *mule-project.xml* file is the Mule project descriptor file. Open this file to change the project runtime, set or edit environment variables, or edit the project description. Commit this file, along with your <name>.xml file to your source control systems to avoid errors when sharing your project.

== Modeling a Mule Flow

In this tutorial, your goal is to build an application that receives an HTTP request, logs the message payload, and then modifies the payload before returning it as an HTTP response. You can build this application using three building blocks in Studio:

[cols=",",]
|===
|*link:#[HTTP Connector]* |Allows your Mule application to connect to Web resources through the HTTP or HTTPS protocol. Find this in the Connectors section of the palette.  
|*link:/documentation/display/current/Logger+Component+Reference[Logger Component]* |Logs messages or activity based on the value of a Mule expression. Find this in the Components section of the palette.
|*link:/documentation/display/current/Set+Payload+Transformer+Reference[Set Payload Transformer]* |Modifies your payload into a "Hello, World" message. Find this in the Transformers section of the palette.
|===

Drag and drop these three building blocks into place on the canvas to visually construct, or model, your flow, in the order shown:

image:/documentation/download/attachments/122751580/flow.png?version=1&modificationDate=1417727446682[image]

More detailed instructions:

If necessary, consult this link:/documentation/display/current/Anypoint+Studio+Essentials[quick overview] on how to use the visual editor to drag and drop building blocks from the palette onto the canvas.

Or, follow this step-by-step guide to model the flow for this example.

. Click and drag an *HTTP Connector* from the Connectors section of the palette onto the canvas.
+
image:/documentation/download/attachments/122751580/add+http.png?version=1&modificationDate=1417727729846[image]
+
. Click and drag a *Logger* from the Components section of the palette and drop it to the right of the HTTP endpoint on the canvas.
+
image:/documentation/download/attachments/122751580/add+logger.png?version=1&modificationDate=1417727896871[image]
+
. Lastly, place a *Set Payload* transformer immediately to the right of the Logger component, making sure to drop it inside the dashed line area.
+
image:/documentation/download/attachments/122751580/add+set+payload.png?version=1&modificationDate=1417727816144[image]
+

[NOTE]
====
*Tip: Use the Palette Filter*

image:/documentation/download/thumbnails/122751580/Studio_Palette_filter.png?version=1&modificationDate=1405024031859[image]

*Note*: Building blocks in each category of the palette are organized alphabetically. To avoid scrolling, use the Filter tool in the upper right corner of the palette to find the building blocks that you want more quickly.
====

With just a few clicks, you have modeled your entire application on the Studio canvas.

After you configure individual elements within it, which occurs in the next section, this flow accomplishes the goals that you set out to achieve with this application. Each building block you select and place on the canvas performs part of the functionality of your application, as shown in the image below.

image:/documentation/download/attachments/122751580/explanation.png?version=1&modificationDate=1417729626346[image]

== Configuring the Flow Elements

Nearly all Mule elements provide configuration options, which you can set in one of two ways:

* Via the building block *Properties* tabs in Studio's visual editor
* Via XML code in Studio's *XML* editor

The following instructions introduce you to configuring in both editors.

. Click the HTTP building block in your flow to open its link:/documentation/display/current/The+Properties+Editor[Properties Editor]. 
. Change the *Path* field from the default `/` to `*`. In this way, the connector listens not only to the base path – which is defined elsewhere – but also to every subpath inside it.
+
image:/documentation/download/attachments/122751580/http+path.png?version=1&modificationDate=1428696302048[image]
+
. For this element to work, you must reference an abstract element called a *Connector Configuration*, which is a kind of link:/documentation/display/current/Global+Elements[Global Element] that contains several of the high level necessary configuration properties. One single Connector Configuration element can be referenced by as many HTTP connectors as you like. Create a new Connector Configuration element by clicking the green plus sign next to the Connector Configuration field.
+
image:/documentation/download/attachments/122751580/http+basic+*.png?version=1&modificationDate=1425301097495[image]
+
. A new window appears. Fill in the two required fields: *Host* and *Port*. Set `localhost` as the host and leave the default value `8081` as the port.
+
image:/documentation/download/attachments/122751580/global+element.png?version=1&modificationDate=1417730518265[image]
+
. Click *Ok* to close this dialogue. Notice how the Connector Configuration field now contains a reference to the element you just created. You can edit it further by clicking the `edit` icon. Notice that now, as all required fields are provided, there are no more error notifications.
. Click *Configuration XML* at the bottom of the canvas to switch to the XML editor view.
+
image:/documentation/download/attachments/122751580/canvas_tabs_xml.png?version=1&modificationDate=1405024031016[image]
+
Notice that the flow is represented as a series of XML tags, with a `flow` element as the parent and three child elements, one for each of the ones you dragged into your canvas in the Visual Editor.
+
The `doc:name` attribute on each element corresponds to the display name that appears underneath the building block icon on the Message Flow canvas. Note that the `http:listener` element has its `path` property set to `*` as you configured in the properties editor, this element also has its property `config-ref` pointing to the Configuration Element that you created.
+
The Configuration Element sits above the flow you built, outside it, as it could potentially be referenced by other HTTP connectors on other flows. Observe that the configurations you set in the Configuration Element and those in the XML view of this element are the same:
+
If  you make any changes in the XML configuration view, for example if you change the value of the *port* attribute on the `http-listener-config`, then this change is reflected if you switch back to the visual editor and open the HTTP Connector's properties editor. Studio's two-way editor automatically updates the configuration as you switch back and forth.
. Click *Message Flow* to switch back to the visual editor.
+
image:/documentation/download/attachments/122751580/canvas_tabs_flow.png?version=1&modificationDate=1405024030994[image]  
+
. Click the *Logger* building block to switch the Properties Editor to the Logger component.
. In the *Message* field, enter:` Current path is #[message.inboundProperties.'http.request.path']`.  Notice how a menu with suggestions pops open as soon as you type `#`, and narrows down its suggestions as you keep typing.
+
image:/documentation/download/attachments/122751580/logger+for+path.png?version=3&modificationDate=1418222476592[image]
+
The String `#[message.inboundProperties.'http.request.path']` is a simple link:/documentation/display/current/Mule+Expression+Language+MEL[Mule expression] which evaluates to the requested property of the message as it passes this point in the flow. Including this message here instructs Mule to log this information in the application log files, which can be useful in more complex use cases, when you need to track the payload at different points in your flow.
. Click the *Set Payload* building block to switch the Properties Editor to the Set Payload transformer.
. Notice that the Value field contains these characters: **#[]**
+
image:/documentation/download/attachments/122751580/set+payload1.png?version=1&modificationDate=1417732002607[image] +
+
This field supports link:/documentation/display/current/Mule+Expression+Language+MEL[Mule expressions], which take the form of a string enclosed with `#[]`. If you enter a Mule expression here, Mule evaluates it at runtime and returns or uses the results for further processing. Note that this field also accepts literals, so you can enter any string here to instruct Mule to set that string as your new payload. In this tutorial, however, you use an expression to create a dynamic message.
. In the *Value* field, enter the following: +
+
`#['Hello, ' + message.inboundProperties.'http.request.path' + '. Today is ' + server.dateTime.format('dd/MM/yy') + '.' ]`
+
image:/documentation/download/attachments/122751580/set+payload2.png?version=2&modificationDate=1417785099396[image]
+
[NOTE]
Note that *`message.inboundProperties.'http.request.path'`* and *`server.dateTime.format('dd/MM/yy')`* are both Mule expressions. Because you are entering them within a larger Mule expression, the `#[]` syntax is not required around these individual expressions. Anything that you enter inside of the `#[]` syntax which is _not_ a Mule expression must be enclosed with quotes so that Mule reads it as a string.
. Save your application by clicking *File* > *Save*.

Your complete application XML, once configured, should look like the following:

[source,xml]
----
<?xml version="1.0" encoding="UTF-8"?>

<mule xmlns:http="http://www.mulesoft.org/schema/mule/http" xmlns:tracking="http://www.mulesoft.org/schema/mule/ee/tracking" xmlns="http://www.mulesoft.org/schema/mule/core" xmlns:doc="http://www.mulesoft.org/schema/mule/documentation"
    xmlns:spring="http://www.springframework.org/schema/beans" version="EE-3.6.2"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://www.springframework.org/schema/beans http://www.springframework.org/schema/beans/spring-beans-current.xsd
http://www.mulesoft.org/schema/mule/core http://www.mulesoft.org/schema/mule/core/current/mule.xsd
http://www.mulesoft.org/schema/mule/http http://www.mulesoft.org/schema/mule/http/current/mule-http.xsd
http://www.mulesoft.org/schema/mule/ee/tracking http://www.mulesoft.org/schema/mule/ee/tracking/current/mule-tracking-ee.xsd">
    <http:listener-config name="HTTP_Listener_Configuration" host="localhost" port="8081" doc:name="HTTP Listener Configuration"/>
    <flow name="basic_tutorialFlow">
        <http:listener config-ref="HTTP_Listener_Configuration" path="*" doc:name="HTTP"/>
        <logger level="INFO" doc:name="Logger" message="Current path is #[message.inboundProperties.'http.request.path']"/>
        <set-payload doc:name="Set Payload" value="#['Hello, ' + message.inboundProperties.'http.request.path' + '. Today is ' + server.dateTime.format('dd/MM/yy') + '.' ]"/>
    </flow>
</mule>
----

== Running the Application

Having built, configured, and saved your new application, you are ready to run it on the embedded Mule server (included as part of the bundled download of Anypoint Studio).

. In the *Package Explorer* pane, right-click project name, then select *Run As* > *Mule Application*. (If you have not already saved, Mule prompts you to save now.)
+
image:/documentation/download/attachments/122751580/run.png?version=1&modificationDate=1417732270090[image]
+
. Mule immediately kicks into gear, starting your application and letting it run. When the startup process is complete, Studio displays a message in the console that reads, `Started app 'basic_tutorial'`.
+
image:/documentation/download/attachments/122751580/BasicTutorial_Console_started.png?version=1&modificationDate=1405024030731[image]


== Using the Application

. Open any Web browser, then navigate to` http://localhost:8081/world`
+
[NOTE]
Since you set the HTTP Connector's path to `*`, any requests done to any subpath under `localhost:8081` are picked up by your app.
+
. Your browser presents a message that reads,  `Hello, /world. Today is [today's date].`
. In your browser’s address bar, replace the word `world` with your own name, then press *enter*.
. Your browser presents the same message, but includes your name instead of "world".
+
image:/documentation/download/attachments/122751580/BasicTutorial_Browser.png?version=1&modificationDate=1405024030668[image]
+
. Next, check your console in Anypoint Studio to verify that Mule logged the payload before the message reached the expression transformer. 
. Place your cursor in the console window, press CTRL+F or CMD+F to open a Find dialog, then search for `Current path`. Look for results corresponding to the paths that you entered in your browser. For example:
+
`INFO  2014-12-04 09:22:26,446 [[basic_tutorial].connector.http.mule.default.receiver.02] org.mule.api.processor.LoggerMessageProcessor: Current path is /Aaron` +
You may also see some other results for a payload of "`/favicon.ico`". These results are automatically generated by your browser. You can filter out these results in the link:#BasicStudioTutorial-EditingtheApplication[Editing the Application] section, below.


Congratulations! You've run and tested your application!

* You submitted a request to the inbound endpoint of your application via your Web browser. 
* The Mule application received your request and logged the payload (whatever you typed after `http://localhost:8081/`) to the console. 
* The application then sent the message on to the Set Payload transformer, which transformed the payload per its instructions, then returned the results to your HTTP endpoint. 

== Stopping the Application

To stop the application, click the red, square *Terminate* icon above the console panel. 

image:/documentation/download/attachments/122751580/stopbasictutorial.png?version=1&modificationDate=1405024031407[image]


== Editing the Application

If you take a look at the console output in Anypoint Studio, you may notice that some of the logged messages aren't for the requests you generated, they have print a value of "`/favicon.ico`" to the console, these are generated by your browser when it requests for an icon to display on the browser tab. You can add a filter element into your flow to exclude the messages with this path. Here's how:

. Drag and drop an *Expression Filter* from the Filters section of the palette onto your canvas, positioning it between the HTTP endpoint and the Logger.
+
image:/documentation/download/attachments/122751580/add+filter.png?version=1&modificationDate=1417733194064[image]
+
. Click the Expression Filter to open its properties tab and enter the following in the *Expression* field:
+
`#[message.inboundProperties.'http.request.uri' != '/favicon.ico']`
+
image:/documentation/download/attachments/122751580/filter+new.png?version=1&modificationDate=1418221749566[image]
+
This expression tells Mule to check that the inbound property 'http.request.url' _is not equal to_ the string '/favicon.ico'. If the expression evaluates to true, Mule passes the message on to the next step in the flow. If the expression evaluates to false, Mule stops processing the message.
. Save your application and run it again. (Right-click the project name in your Package Explorer, then click *Run As* > *Mule Application*.)
. Wait for the message in the console that reads, `Started app 'basic_tutorial'`.
. Return to your Web browser and go to `http://localhost:8081/world`
. Replace `world` with another word of your choice and refresh. Repeat this step several times with different words.
. Check the logged paths in your console: place your cursor in the console window, press CTRL+F or CMD+F to open a Find dialog, then search for `Current path`.
. All payloads that you see should correspond to the words you entered in your browser, and `/favicon.ico` should no longer be included. 

Your complete application XML, once edited, should look like the following:

[source,xml]
----
<?xml version="1.0" encoding="UTF-8"?>

<mule xmlns:http="http://www.mulesoft.org/schema/mule/http" xmlns:tracking="http://www.mulesoft.org/schema/mule/ee/tracking" xmlns="http://www.mulesoft.org/schema/mule/core" xmlns:doc="http://www.mulesoft.org/schema/mule/documentation"
    xmlns:spring="http://www.springframework.org/schema/beans" version="EE-3.6.2"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://www.springframework.org/schema/beans http://www.springframework.org/schema/beans/spring-beans-current.xsd
http://www.mulesoft.org/schema/mule/core http://www.mulesoft.org/schema/mule/core/current/mule.xsd
http://www.mulesoft.org/schema/mule/http http://www.mulesoft.org/schema/mule/http/current/mule-http.xsd
http://www.mulesoft.org/schema/mule/ee/tracking http://www.mulesoft.org/schema/mule/ee/tracking/current/mule-tracking-ee.xsd">
    <http:listener-config name="HTTP_Listener_Configuration" host="localhost" port="8081" doc:name="HTTP Listener Configuration"/>
    <flow name="basic_tutorialFlow">
        <http:listener config-ref="HTTP_Listener_Configuration" path="*" doc:name="HTTP"/>
        <expression-filter expression="#[payload != '/favicon.ico']" doc:name="Expression"/>
        <logger level="INFO" doc:name="Logger" message="Current path is #[message.inboundProperties.'http.request.path']"/>
        <set-payload doc:name="Set Payload" value="#['Hello, ' + message.inboundProperties.'http.request.path' + '. Today is ' + server.dateTime.format('dd/MM/yy') + '.' ]"/>
    </flow>
</mule>
----


== Extra Credit

Now that you know your way around Anypoint Studio, try applying your knowledge to an extra task. Revise your application so that, in addition to returning the transformed payload as an HTTP response in your browser as it does now, Mule also:

. Logs the unique message id that Mule automatically assigns to each message that passes through a flow
. Writes the message payload that you see in your browser to a new .txt file on your local drive 
. Names each .txt file using the message ID

To achieve this, add another message processor to your flow to direct Mule to write your payload to a link:/documentation/display/current/File+Connector[file]. You also need to use another Mule expression that you haven't seen before in order to log and use the link:/documentation/display/current/Mule+Expression+Language+Reference#MuleExpressionLanguageReference-ContextObjects[unique message id]. Use the hints below if you need help.

image:/documentation/download/thumbnails/122751580/icon-question-blue-big%281%29.png?version=1&modificationDate=1405024031156[image] *Hints*

*How do I log the message ID?*

The Mule expression that resolves to the unique message ID of the current message is `#[message.id]`

*How do I write to a file?*

Try adding a link:/documentation/display/current/File+Connector[File Connector] after the Set Payload transformer in your flow. 

*How do I name a text file using the message ID?*

Fill in the *Output Pattern* field in the File Endpoint to tell Mule how to name the file and what file type to use. Note that you can use the same Mule expression here that you used to log the message ID.

image:/documentation/download/thumbnails/122751580/icon-checkmark-blue-big%283%29.png?version=1&modificationDate=1405024031099[image] *Answer*

View the answer, including explanation of steps and complete code.

There is more than one way to achieve the goals outlined above, but the following describes the quickest way.

. Click your existing *Logger* component to open its properties tab. 
. Revise the *Message* field to read:
+
----
Current path is #[message.inboundProperties.'http.request.path']
----
+
. Drag and drop a *File Endpoint* onto your canvas, immediately after the Set Payload transformer.
+
image:/documentation/download/attachments/122751580/add+file.png?version=1&modificationDate=1417733369806[image]
+
. Click the *File Endpoint* to open the Properties editor.
. Enter a *Path* where you want Mule to create a file. For example: `/Applications/anypointStudio/examples/BasicTutorial`
. Enter an File Name/Pattern that defines the file name and type, as follows:
+
`#[message.id].txt`
+
View the code of the revised application:
+
[source,xml]
----
<?xml version="1.0" encoding="UTF-8"?>

<mule xmlns:file="http://www.mulesoft.org/schema/mule/file" xmlns:http="http://www.mulesoft.org/schema/mule/http" xmlns:tracking="http://www.mulesoft.org/schema/mule/ee/tracking" xmlns="http://www.mulesoft.org/schema/mule/core" xmlns:doc="http://www.mulesoft.org/schema/mule/documentation"
    xmlns:spring="http://www.springframework.org/schema/beans" version="EE-3.6.0"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://www.springframework.org/schema/beans http://www.springframework.org/schema/beans/spring-beans-current.xsd
http://www.mulesoft.org/schema/mule/core http://www.mulesoft.org/schema/mule/core/current/mule.xsd
http://www.mulesoft.org/schema/mule/http http://www.mulesoft.org/schema/mule/http/current/mule-http.xsd
http://www.mulesoft.org/schema/mule/ee/tracking http://www.mulesoft.org/schema/mule/ee/tracking/current/mule-tracking-ee.xsd
http://www.mulesoft.org/schema/mule/file http://www.mulesoft.org/schema/mule/file/current/mule-file.xsd">
    <http:listener-config name="HTTP_Listener_Configuration" host="localhost" port="8081" doc:name="HTTP Listener Configuration"/>
    <flow name="basic_tutorialFlow">
        <http:listener config-ref="HTTP_Listener_Configuration" path="*" doc:name="HTTP"/>
        <expression-filter expression="#[payload != '/favicon.ico']" doc:name="Expression"/>
        <logger level="INFO" doc:name="Logger" message="Current path is #[message.inboundProperties.'http.request.path']"/>
        <set-payload doc:name="Set Payload" value="#['Hello, ' + message.inboundProperties.'http.request.path' + '. Today is ' + server.dateTime.format('dd/MM/yy') + '.' ]"/>
        <file:outbound-endpoint path="/Applications/anypointStudio/examples/BasicTutorial" outputPattern="#[message.id].txt" responseTimeout="10000" doc:name="File"/>
    </flow>
</mule>
----
+
. Save your application, then run it again. (Right-click *Basic Tutorial.xml* in your Package Explorer, then click *Run As* > *Mule Application*.)
. Wait for the message in the console that reads, `Started app 'basic_tutorial'`.
. Return to your Web browser and go to `http://localhost:8081/world`
. Replace `world` with another word of your choice and refresh.
. Check your console, using the Find command, for the logged payload and message ID to confirm that Mule has logged both successfully for each message you have initiated using the browser.
. Navigate to the folder on your local drive that you defined in Step 5, above. 
. Your folder should contain .txt files. Open each .txt file and confirm that: 
.. The payload matches what you observed in your browser  
.. The file name corresponds to the message id logged in your console

Congratulations! You earned your extra credit. You're all set to go on to the link:/documentation/display/current/Content-Based+Routing+Tutorial[Content-Based Routing Tutorial].

== See Also

* *NEXT STEP:* Continue the hands-on learning experience with the link:/documentation/display/current/Content-Based+Routing+Tutorial[Content-Based Routing Tutorial].
* Want to learn more about Mule Expression Language (MEL)? Check out the link:/documentation/display/current/Mule+Expression+Language+MEL[complete reference].
* Get a deeper explanation about the Mule message and anatomy of a Mule flow in link:/documentation/display/current/Mule+Concepts[Mule Concepts].
* Want to try a Hello World example using link:/documentation/display/current/CloudHub[CloudHub] instead? Check out link:/documentation/display/current/Hello+World+on+CloudHub[Hello World on CloudHub].
